fix(contacts): fix widget wrap

--- a/app/components/contacts/styles.css
+++ b/app/components/contacts/styles.css
@@ -1,7 +1,7 @@
 .contacts {
 	width: 100%;
 	height: 100%;
-	padding: 40px 50px;
+	padding: 40px 40px 40px 50px;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 	background-color: #fff;
